feat(027): get custom rewards by project
